# MacroTacticalCockpit

./: .gitignore  Macro Tactical Cockpit PRD.md  app.py  pyproject.toml  requirements.txt
src/: config.py  data.py  models.py  quant.py  visuals.py
tests/: conftest.py  screenshot_ui.py  test_data.py  test_e2e_ui.py  test_models.py  test_quant.py  test_visuals.py
