[project]
name = "macro-tactical-cockpit"
version = "0.1.0"
description = "Local-first macro trading cockpit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.40",
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.40",
    "scipy>=1.14",
    "hmmlearn>=0.3",
    "statsmodels>=0.14",
    "plotly>=5.24",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-playwright>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
